--- a/style.css
+++ b/style.css
@@ -6,6 +6,24 @@
     box-sizing: border-box;
 }
 
+:root {
+    --card-color-primary: #f7dd43;
+    --card-title-border-color: #746615;
+    --card-bg-color: #1d1c19;
+}
+
+body.blue {
+    --card-color-primary: #338af3;
+    --card-title-border-color: #338af3;
+    --card-bg-color: #202024;
+}
+
+body.green {
+    --card-color-primary: #047c3f;
+    --card-title-border-color: #047c3f;
+    --card-bg-color: #1a1f1b;
+}
+
 body {
     background-color: #121214;
     background-image: url(./assets/bg.svg);
@@ -35,8 +53,8 @@ header {
     padding: 32px 23px;
     text-align: center;
 
-    background-color: #1d1c19;
-    border-bottom: 2px solid #f7dd43;
+    background: var(--card-bg-color);
+    border-bottom: 2px solid var(--card-color-primary);
     border-radius: 6px;
 
 }
@@ -48,7 +66,7 @@ header {
     align-items: center;
 
     padding: 8px 16px;
-    border: 2px solid #746615;
+    border: 2px solid var(--card-color-primary);
     border-radius: 6px;
 
     width: fit-content;
@@ -119,5 +137,14 @@ ul {
 
     100% {
         opacity: 1;
+    }
+}
+
+
+@media (min-width: 800px) {
+    #cards {
+        max-width: 670px;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 }
