--- a/style.css
+++ b/style.css
@@ -10,31 +10,37 @@
     --card-color-primary: #f7dd43;
     --card-title-border-color: #746615;
     --card-bg-color: #1d1c19;
+    --bg: url(./assets/bg-yellow.svg);
 }
 
 body.blue {
     --card-color-primary: #338af3;
     --card-title-border-color: #338af3;
     --card-bg-color: #202024;
+    --bg: url(./assets/bg-blue.svg);
 }
 
 body.green {
     --card-color-primary: #047c3f;
     --card-title-border-color: #047c3f;
     --card-bg-color: #1a1f1b;
+    --bg: url(./assets/bg-green.svg);
 }
 
 body {
     background-color: #121214;
-    background-image: url(./assets/bg.svg);
-    background-position: center -715px;
+    background-image: var(--bg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     font-family: 'Roboto', sans-serif;
 }
 
 #app {
     width: fit-content;
-    margin: 52px auto;
+    margin: auto;
+    padding-top: 52px;
 }
 
 header {
